--- Changed instances of "Filter" to "Trigger"         -- This will hopefully be clearer that selecting triggers means targeting patients         with specific criteria.

--- a/templates/educational-material/add.educational-material.html
+++ b/templates/educational-material/add.educational-material.html
@@ -216,7 +216,7 @@
                         <span ng-if="checkFilters(patientFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Patient Filter(s)</strong>
+                        <strong>Patient Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(patientFilterList)"></i>
@@ -241,7 +241,7 @@
                         <span ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Demographic Filter(s)</strong>
+                        <strong>Demographic Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':demoSection.open, 'glyphicon-chevron-right':!demoSection.open}" ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100"></i>
@@ -271,7 +271,7 @@
                         <span ng-if="checkFilters(appointmentList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Appointment Filter(s)</strong>
+                        <strong>Appointment Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(appointmentList)"></i>
@@ -296,7 +296,7 @@
                         <span ng-if="checkFilters(dxFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Diagnosis Filter(s)</strong>
+                        <strong>Diagnosis Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(dxFilterList)"></i>
@@ -321,7 +321,7 @@
                         <span ng-if="checkFilters(doctorFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Doctor Filter(s)</strong>
+                        <strong>Doctor Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(doctorFilterList)"></i>
@@ -346,7 +346,7 @@
                         <span ng-if="checkFilters(resourceFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Treatment Machine Filter(s)</strong>
+                        <strong>Treatment Machine Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(resourceFilterList)"></i>
@@ -784,7 +784,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Patient Filters</h2>
+                      <h2>Trigger to Send By Patient</h2>
                     </span>  
                   </div>  
                 </div>
@@ -793,7 +793,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more patients below. This will target all patients selected here. Leave blank for no filters.
+                    Select one of more patients below. This will target all patients selected here. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
@@ -828,7 +828,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Demographic Filters</h2>
+                      <h2>Trigger to Send By Demographic</h2>
                     </span>  
                   </div>  
                 </div>
@@ -837,7 +837,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Please assign a demographic filter. Leave unmarked for no filter.
+                    Please assign a demographic trigger. Leave unmarked for no trigger.
                   </p>
                 </div>
               </div>  
@@ -901,7 +901,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Appointment Filters</h2>
+                      <h2>Trigger to Send By Appointment</h2>
                     </span>  
                   </div>  
                 </div>
@@ -910,7 +910,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more appointment filters below. This will target patients with these specific appointments. Leave blank for no filters.
+                    Select one of more appointment triggers below. This will target patients with these specific appointments. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
@@ -945,7 +945,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Diagnosis Filters</h2>
+                      <h2>Trigger to Send By Diagnosis</h2>
                     </span>  
                   </div>  
                 </div>
@@ -954,7 +954,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more diagnosis filters below. This will target patients with these specific diagnoses. Leave blank for no filters.
+                    Select one of more diagnosis triggers below. This will target patients with these specific diagnoses. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
@@ -989,7 +989,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Doctor Filters</h2>
+                      <h2>Trigger to Send By Doctor</h2>
                     </span>  
                   </div>  
                 </div>
@@ -998,7 +998,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more doctor filters below. This will target patients with these specific doctors. Leave blank for no filters.
+                    Select one of more doctor triggers below. This will target patients with these specific doctors. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
@@ -1033,7 +1033,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Treatment Machine Filters</h2>
+                      <h2>Trigger to Send By Treatment Machine</h2>
                     </span>  
                   </div>  
                 </div>
@@ -1042,7 +1042,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more machine filters below. This will target patients with these specific treatment machines. Leave blank for no filters.
+                    Select one of more machine triggers below. This will target patients with these specific treatment machines. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
