--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -44,7 +44,7 @@
     <div uib-accordion-group is-open="bodySection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Body </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': bodySection.open, 'glyphicon-chevron-right': !bodySection.open}"></i>
+          <strong>Body/Content </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': bodySection.open, 'glyphicon-chevron-right': !bodySection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="row">
@@ -126,11 +126,11 @@
     <div uib-accordion-group is-open="patientFilterSection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientFilterSection.open, 'glyphicon-chevron-right': !patientFilterSection.open}"></i>
+          <strong>Trigger to Send By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientFilterSection.open, 'glyphicon-chevron-right': !patientFilterSection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="alert alert-info" role="alert">
-        <strong>Current Patient Filters</strong><br>
+        <strong>Current Patient Triggers</strong><br>
         <p>
           <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(patientFilterList)"></span>
           <span ng-if="allFilters(patientFilterList)">No filter</span>
@@ -160,11 +160,11 @@
     <div uib-accordion-group is-open="appointmentFilterSection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Filter By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': appointmentFilterSection.open, 'glyphicon-chevron-right': !appointmentFilterSection.open}"></i>
+          <strong>Trigger to Send By Appointment</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': appointmentFilterSection.open, 'glyphicon-chevron-right': !appointmentFilterSection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="alert alert-info" role="alert">
-        <strong>Current Appointment Filters</strong><br>
+        <strong>Current Appointment Triggers</strong><br>
         <p>
           <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(appointmentList)"></span>
           <span ng-if="allFilters(appointmentList)">No filter</span>
@@ -194,11 +194,11 @@
     <div uib-accordion-group is-open="diagnosisFilterSection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisFilterSection.open, 'glyphicon-chevron-right': !diagnosisFilterSection.open}"></i>
+          <strong>Trigger to Send By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': diagnosisFilterSection.open, 'glyphicon-chevron-right': !diagnosisFilterSection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="alert alert-info" role="alert">
-        <strong>Current Doctor Filters</strong><br>
+        <strong>Current Diagnosis Triggers</strong><br>
         <p>
           <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(dxFilterList)"></span>
           <span ng-if="allFilters(dxFilterList)">No filter</span>
@@ -228,11 +228,11 @@
     <div uib-accordion-group is-open="doctorFilterSection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': doctorFilterSection.open, 'glyphicon-chevron-right': !doctorFilterSection.open}"></i>
+          <strong>Trigger to Send By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': doctorFilterSection.open, 'glyphicon-chevron-right': !doctorFilterSection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="alert alert-info" role="alert">
-        <strong>Current Doctor Filters</strong><br>
+        <strong>Current Doctor Triggers</strong><br>
         <p>
           <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(doctorFilterList)"></span>
           <span ng-if="allFilters(doctorFilterList)">No filter</span>
@@ -262,11 +262,11 @@
     <div uib-accordion-group is-open="resourceFilterSection.open">
       <uib-accordion-heading>
         <div>
-          <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': resourceFilterSection.open, 'glyphicon-chevron-right': !resourceFilterSection.open}"></i>
+          <strong>Trigger to Send By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': resourceFilterSection.open, 'glyphicon-chevron-right': !resourceFilterSection.open}"></i>
         </div>
       </uib-accordion-heading>
       <div class="alert alert-info" role="alert">
-        <strong>Current Treatment Machine Filters</strong><br>
+        <strong>Current Treatment Machine Triggers</strong><br>
         <p>
           <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="allFilters(resourceFilterList)"></span>
           <span ng-if="allFilters(resourceFilterList)">No filter</span>
