--- a/templates/post/add.post.html
+++ b/templates/post/add.post.html
@@ -104,7 +104,7 @@
                         <span ng-if="newPost.body_EN && newPost.body_FR" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Body</strong>
+                        <strong>Body/Content</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': bodySection.open, 'glyphicon-chevron-right': !bodySection.open}" ng-if="newPost.body_EN || newPost.body.FR"></i>
@@ -148,7 +148,7 @@
                         <span ng-if="checkFilters(patientFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Patient Filter(s)</strong>
+                        <strong>Patient Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(patientFilterList)"></i>
@@ -173,7 +173,7 @@
                         <span ng-if="checkFilters(appointmentList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Appointment Filter(s)</strong>
+                        <strong>Appointment Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(appointmentList)"></i>
@@ -198,7 +198,7 @@
                         <span ng-if="checkFilters(dxFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Diagnosis Filter(s)</strong>
+                        <strong>Diagnosis Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(dxFilterList)"></i>
@@ -223,7 +223,7 @@
                         <span ng-if="checkFilters(doctorFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Doctor Filter(s)</strong>
+                        <strong>Doctor Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(doctorFilterList)"></i>
@@ -248,7 +248,7 @@
                         <span ng-if="checkFilters(resourceFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Treatment Machine Filter(s)</strong>
+                        <strong>Treatment Machine Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(resourceFilterList)"></i>
@@ -418,7 +418,7 @@
                   <div style="height: 10px; border-bottom:2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Body</h2>
+                      <h2>Body/Content</h2>
                     </span>  
                   </div>  
                 </div>
@@ -427,7 +427,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 5px;">
                     <span style="color:#d9534f"><strong>Required field:</strong></span>
-                    Please assign the message content in both english and in french.
+                    Please assign the post content in both english and in french.
                   </p>
                   <p style="margin-bottom: 5px;">
                     <span style="color:#d9534f"><strong>HTML exceptions</strong></span><br>
@@ -541,7 +541,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Patient Filters</h2>
+                      <h2>Trigger to Send By Patient</h2>
                     </span>  
                   </div>  
                 </div>
@@ -550,7 +550,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more patient filters below. This will target patients selected here. Leave blank for no filters.
+                    Select one of more patient triggers below. This will target patients selected here. Leave blank for no trigger.
                   </p>
                 </div>
               </div>  
@@ -585,7 +585,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Appointment Filters</h2>
+                      <h2>Trigger to Send By Appointment</h2>
                     </span>  
                   </div>  
                 </div>
@@ -594,7 +594,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more appointment filters below. This will target patients with these specific appointments. Leave blank for no filters.
+                    Select one of more appointment triggers below. This will target patients with these specific appointments. Leave blank for no trigger.
                   </p>
                 </div>
               </div>  
@@ -629,7 +629,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Diagnosis Filters</h2>
+                      <h2>Trigger to Send By Diagnosis</h2>
                     </span>  
                   </div>  
                 </div>
@@ -638,7 +638,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more diagnosis filters below. This will target patients with these specific diagnoses. Leave blank for no filters.
+                    Select one of more diagnosis triggers below. This will target patients with these specific diagnoses. Leave blank for no trigger.
                   </p>
                 </div>
               </div>  
@@ -673,7 +673,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Doctor Filters</h2>
+                      <h2>Trigger to Send By Doctor</h2>
                     </span>  
                   </div>  
                 </div>
@@ -682,7 +682,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more doctor filters below. This will target patients with these specific doctors. Leave blank for no filters.
+                    Select one of more doctor triggers below. This will target patients with these specific doctors. Leave blank for no triggers.
                   </p>
                 </div>
               </div>  
@@ -717,7 +717,7 @@
                   <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fas fa-dot-circle"></span>
-                      <h2>Treatment Machine Filters</h2>
+                      <h2>Trigger to Send By Treatment Machine</h2>
                     </span>  
                   </div>  
                 </div>
@@ -726,7 +726,7 @@
                 <div class="col-xs-12">
                   <p style="margin-bottom: 10px;">
                     <span><strong>Optional field:</strong></span>
-                    Select one of more machine filters below. This will target patients with these specific treatment machines. Leave blank for no filters.
+                    Select one of more machine triggers below. This will target patients with these specific treatment machines. Leave blank for no trigger.
                   </p>
                 </div>
               </div>  
