--- a/templates/questionnaire/add.questionnaire.html
+++ b/templates/questionnaire/add.questionnaire.html
@@ -158,7 +158,7 @@
                         <span ng-if="checkFilters(patientFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Patient Filter(s)</strong>
+                        <strong>Patient Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(patientFilterList)"></i>
@@ -184,7 +184,7 @@
                         <span ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Demographic Filter(s)</strong>
+                        <strong>Demographic Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down':filterSection.open, 'glyphicon-chevron-right':!filterSection.open}" ng-if="demoFilter.sex || demoFilter.age.min != 0 || demoFilter.age.max != 100"></i>
@@ -215,7 +215,7 @@
                         <span ng-if="checkFilters(appointmentList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Appointment/Task Filter(s)</strong>
+                        <strong>Appointment/Task Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(appointmentList)"></i>
@@ -241,7 +241,7 @@
                         <span ng-if="checkFilters(dxFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Diagnosis Filter(s)</strong>
+                        <strong>Diagnosis Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(dxFilterList)"></i>
@@ -267,7 +267,7 @@
                         <span ng-if="checkFilters(doctorFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Doctor Filter(s)</strong>
+                        <strong>Doctor Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(doctorFilterList)"></i>
@@ -293,7 +293,7 @@
                         <span ng-if="checkFilters(resourceFilterList)" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                       </div>
                       <div class="col-md-8">
-                        <strong>Treatment Machine Filter(s)</strong>
+                        <strong>Treatment Machine Trigger(s)</strong>
                       </div>
                       <div class="col-md-2">
                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': filterSection.open, 'glyphicon-chevron-right': !filterSection.open}" ng-if="checkFilters(resourceFilterList)"></i>
@@ -669,7 +669,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Patient Filters</h2>
+                        <h2>Trigger to Send By Patient</h2>
                       </span>  
                     </div>  
                   </div>
@@ -678,7 +678,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Select one of more patient filters below. This will target patients checkmarked below. Leave blank for no filters.
+                      Select one of more patient trigger below. This will target patients select here. Leave blank for no trigger.
                     </p>
                   </div>
                 </div>  
@@ -714,7 +714,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Demographic Filters</h2>
+                        <h2>Trigger to Send By Demographic</h2>
                       </span>  
                     </div>  
                   </div>
@@ -723,7 +723,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Please assign a demographic filter. Leave unmarked for no filter.
+                      Please assign a demographic trigger. Leave unmarked for no trigger.
                     </p>
                   </div>
                 </div>  
@@ -788,7 +788,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Appointment Filters</h2>
+                        <h2>Trigger to Send By Appointment</h2>
                       </span>  
                     </div>  
                   </div>
@@ -797,7 +797,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Select one of more activity filters below. This will target patients with these specific filters. Leave blank for no filters.
+                      Select one of more appointment triggers below. This will target patients with these specific appointments. Leave blank for no trigger.
                     </p>
                   </div>
                 </div>  
@@ -833,7 +833,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Diagnosis Filters</h2>
+                        <h2>Trigger to Send By Diagnosis</h2>
                       </span>  
                     </div>  
                   </div>
@@ -842,7 +842,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Select one of more diagnosis filters below. This will target patients with these specific diagnoses. Leave blank for no filters.
+                      Select one of more diagnosis triggers below. This will target patients with these specific diagnoses. Leave blank for no trigger.
                     </p>
                   </div>
                 </div>  
@@ -878,7 +878,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fas fa-dot-circle"></span>
-                        <h2>Doctor Filters</h2>
+                        <h2>Trigger to Send By Doctor</h2>
                       </span>  
                     </div>  
                   </div>
@@ -887,7 +887,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Select one of more doctor filters below. This will target patients with these specific doctors. Leave blank for no filters.
+                      Select one of more doctor triggers below. This will target patients with these specific doctors. Leave blank for no trigger.
                     </p>
                   </div>
                 </div>  
@@ -923,7 +923,7 @@
                     <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                       <span style="background-color:#e6edfa; padding: 0 10px;">
                         <span class="fa fa-dot-circle-o"></span>
-                        <h2>Treatment Machine Filters</h2>
+                        <h2>Trigger to Send By Treatment Machine</h2>
                       </span>  
                     </div>  
                   </div>
@@ -932,7 +932,7 @@
                   <div class="col-xs-12">
                     <p style="margin-bottom: 10px;">
                       <span><strong>Optional field:</strong></span>
-                      Select one of more machine filters below. This will target patients with these specific treatment machines. Leave blank for no filters.
+                      Select one of more machine triggers below. This will target patients with these specific treatment machines. Leave blank for no trigger.
                     </p>
                   </div>
                 </div>  
