--- Added select all feature to legacy questionnaire module     --- Changed all instances of "filter" to "trigger"     --- Changed all instances of "resource" to "machine"

--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -229,7 +229,7 @@
         </div>
         <div style="padding: 7px;">
           <label>
-            <input type="checkbox" ng-click="selectAllTriggers(diagnosisTriggerList, searchDxFilter,selectAll.diagnosis)" ng-checked="selectAll.diagnosis.checked"> Select All
+            <input type="checkbox" ng-click="selectAllTriggers(dxTriggerList, searchDxFilter,selectAll.diagnosis)" ng-checked="selectAll.diagnosis.checked"> Select All
           </label>
         </div>
         <ul class="list-items">
