--- Disabled questionnaires (for now)         -- Waiting for polished version

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -145,7 +145,7 @@
               </div>
               
               <!-- SECTION: Questionnaires -->
-							<div class="col-xs-12 col-sm-6">
+							<!-- <div class="col-xs-12 col-sm-6">
 								<div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
 									<div class="panel-info" >
 										<div class="panel-content">
@@ -161,7 +161,7 @@
 										</div>
 									</div>
 								</div>
-              </div>
+              </div> -->
               
               <!-- SECTION: Email -->
 							<div class="col-xs-12 col-sm-6">
