--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <!-- SECTION: Questionnaires -->
-  			        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
+  			        <!-- <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
                   <div class="panel-container animated" ng-class="{pulse: hoverQuestionnaireMenu, active: currentPage == 'questionnaire/menu'}" ng-mouseenter="hoverQuestionnaireMenu=true" ng-mouseleave="hoverQuestionnaireMenu=false" style="cursor:pointer;" ng-click="goToQuestionnaireMainMenu()">
                     <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/menu'}">
                       <div class="panel-content">
@@ -104,7 +104,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
                 <!-- SECTION: Email -->
   			        <div class="col-md-12" ng-if="isAuthorized([userRoles.admin])">
